--- a/assets/style/compStyle/_main.scss
+++ b/assets/style/compStyle/_main.scss
@@ -15,9 +15,7 @@ $n2: #333;
 #conteudo {
     width: 100vw;
     height: calc(100vh - 5rem);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexCenter();
 
     .container {
         margin: auto;
@@ -63,5 +61,76 @@ $n2: #333;
         }
 
         
+    }
+}
+
+@media (max-width: 1024px) {
+    .container {
+        padding: 0px 40px;
+
+        .img-conteudo {
+            width: 450px;
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 770px) {
+    #conteudo {
+
+
+        .container {
+            margin-top: 50px;
+            flex-direction: column;
+            padding: 0px 20px;
+    
+            .titleDesc {
+                width: 400px;
+                align-items: center;
+                text-align: center;
+                margin-bottom: 50px;
+            }
+    
+    
+    
+            .img-conteudo {
+                width: 400px;
+                @include flexCenter();
+    
+                img {
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+}
+
+@media (max-width: 468px) {
+    .container {
+        flex-direction: column;
+        padding: 0px 20px;
+
+        .titleDesc {
+            height: 100vh;
+            width: 350px;
+            align-items: center;
+            text-align: center;
+            justify-content: space-around;
+        }
+
+
+
+        .img-conteudo {
+            width: 350px;
+            padding: 0px 20px;
+            @include flexCenter();
+
+            img {
+                width: 100%;
+            }
+        }
     }
 }
